<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/se"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:backgroundTint="@android:color/darker_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowSplashScreenBackground"
        android:backgroundTint="#3F51B5"
        android:text="REGISTRATE"
        android:textColor="@color/colorAzulOscuro"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />


    <TextView
        android:id="@+id/contraseña"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/contraseña"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/correo"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nombre" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contraseña"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/correo"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/correo"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/apellido"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/apellido" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/correo"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nombre"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sexo"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/contraseña"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/apellido"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <view
        android:id="@+id/view"
        class="android.support.constraint.ConstraintLayout"
        android:layout_width="413dp"
        android:layout_height="122dp"
        android:background="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/correo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/correo2"
        android:textColor="@color/colorBlanco"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:background="@color/colorBlanco"
        android:backgroundTint="@color/colorBlanco"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/correo2"
        app:layout_constraintTop_toBottomOf="@+id/correo2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:background="@color/colorBlanco"
        android:backgroundTint="@color/colorBlanco"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/contraseña2"
        app:layout_constraintTop_toBottomOf="@+id/contraseña2" />

    <TextView
        android:id="@+id/contraseña2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/contraseña2"
        android:textColor="@color/colorBlanco"
        app:layout_constraintStart_toEndOf="@+id/correo2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Es gratis (y lo seguira siendo)"
        android:textColor="@color/colorAzulOscuro"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="101dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="Fecha de Nacimiento"
        android:textColor="@color/colorAzulOscuro"
        app:layout_constraintStart_toStartOf="@+id/sexo"
        app:layout_constraintTop_toBottomOf="@+id/sexo" />

    <Button
        android:id="@+id/registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <RadioGroup
        android:layout_width="84dp"
        android:layout_height="64dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sexo">

        <RadioButton
            android:id="@+id/mujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/Hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/nombre"
        app:layout_constraintTop_toTopOf="@+id/nombre"
        app:srcCompat="@android:drawable/star_big_off"
        tools:layout_editor_absoluteX="3dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/apellido"
        app:layout_constraintTop_toTopOf="@+id/apellido"
        app:srcCompat="@android:drawable/sym_action_email"
        tools:layout_editor_absoluteX="5dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/correo"
        app:layout_constraintTop_toTopOf="@+id/correo"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:layout_editor_absoluteX="5dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/contraseña"
        app:layout_constraintTop_toTopOf="@+id/contraseña"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        tools:layout_editor_absoluteX="-2dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sexo"
        app:layout_constraintTop_toTopOf="@+id/sexo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/stat_notify_chat"
        tools:layout_editor_absoluteX="6dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="35dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:srcCompat="@android:drawable/stat_notify_missed_call"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>